--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,142 @@
+* {
+    margin: 0 auto;
+}
+
+body {
+    background-color: #f9ffdf;
+}
+
+header {
+    background-color: #e2db85;
+    display: block;
+    height: 120px;
+    box-shadow: 0 5px 20px 0 grey;
+    border-radius: 0 0 20px 20px;
+}
+
+header nav {
+    width: 80%;
+    height: 100%;
+    display: table;
+}
+
+header nav #logo {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100px;
+    height: 100%;
+}
+
+header nav #logo img {
+    width: 100%;
+}
+
+header nav #name {
+    display: table-cell;
+    padding-left: 20px;
+    vertical-align: middle;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-size: larger;
+    color: #7f6e68;
+    text-shadow: 2px 2px 5px grey;
+}
+
+header nav #menu {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+header nav #menu ul {
+    list-style: none;
+    float: right;
+}
+
+header nav #menu ul li {
+    background-color: #f9ffdf;
+    box-shadow: 5px 5px 5px 0 grey;
+    border-bottom: 5px solid #ceba96;
+    width: 150px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    float: left;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    color: #c29f96;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+header nav #menu ul li:first-child{
+    border-radius: 10px 0 0 0;
+}
+
+header nav #menu ul li:last-child{
+    border-radius: 0 10px 0 0;
+}
+
+header nav #menu ul li:hover{
+    background-color: #ceba96;
+    color: #7f6e68;
+}
+
+.central {
+    width: 80%;
+    height: 300px;
+    text-align: center;
+    display: block;
+}
+
+.central .container {
+    padding-top: 20px;
+}
+
+footer {
+    height: 100px;
+    width: 100%;
+    display: block;
+    background-color: #e2db85;
+    box-shadow: 0 -5px 20px 0 grey;
+    position: fixed;
+    bottom: 0;
+}
+
+footer .container {
+    width: 80%;
+    height: 100%;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    text-align: center;
+    color: #7f6e68;
+    text-shadow: 2px 2px 5px grey;
+}
+
+footer .container .info {
+    display: table;
+    vertical-align: middle;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+}
+
+footer .container .info #copyright {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+footer .container .info #github {
+    width: 100px;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+footer .container .info #github img {
+    width: 50px;
+}
+
+footer .container .info #github a{
+    text-decoration: none;
+    color: #7f6e68;
+}
+
 @media screen and (max-width: 767px) {
 
 }
