--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,32 @@
+@font-face {
+    font-family: 'Kaushan';
+    src: url("../res/fonts/KaushanScript.otf"); /*URL to font*/
+}
+
+@font-face {
+    font-family: 'Caviar Dreams';
+    src: url("../res/fonts/CaviarDreams.ttf"); /*URL to font*/
+}
+
+@font-face {
+    font-family: 'Caviar Dreams Bold';
+    src: url("../res/fonts/Caviar_Dreams_Bold.ttf"); /*URL to font*/
+}
+
 * {
     margin: 0 auto;
 }
 
 body {
-    background-color: #f9ffdf;
+    background-color: #cdd3b3;
 }
 
 header {
-    background-color: #e2db85;
+    background-color: #e5ebcb;
     display: block;
-    height: 120px;
-    box-shadow: 0 5px 20px 0 grey;
-    border-radius: 0 0 20px 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
 }
 
 header nav {
@@ -23,7 +38,7 @@ header nav {
 header nav #logo {
     display: table-cell;
     vertical-align: middle;
-    width: 100px;
+    width: 60px;
     height: 100%;
 }
 
@@ -35,10 +50,43 @@ header nav #name {
     display: table-cell;
     padding-left: 20px;
     vertical-align: middle;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: 'Kaushan';
     font-size: larger;
-    color: #7f6e68;
-    text-shadow: 2px 2px 5px grey;
+    color: #7f8566;
+}
+
+header nav #search {
+    display: table-cell;
+    vertical-align: middle;
+    font-family: 'Caviar Dreams';
+}
+
+header nav #searchbar{
+    height: 25px;
+    width: 220px;
+    border: none;
+    border-radius: 8px;
+    background:url(../res/images/brush.png);
+    background-size: 16px;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-color: white;
+    padding: 0 0 0 35px;
+}
+
+header nav #submit {
+    background:url(../res/images/search.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width:25px;
+    border: 0;
+    text-indent:-999px
+}
+
+header nav #submit img{
+    width:10px;
+    height:10px;
+    border: 0;
 }
 
 header nav #menu {
@@ -48,65 +96,80 @@ header nav #menu {
 
 header nav #menu ul {
     list-style: none;
-    float: right;
 }
 
 header nav #menu ul li {
-    background-color: #f9ffdf;
-    box-shadow: 5px 5px 5px 0 grey;
-    border-bottom: 5px solid #ceba96;
-    width: 150px;
-    height: 50px;
-    line-height: 50px;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
     float: left;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
-    color: #c29f96;
-    font-weight: bold;
-    margin-right: 5px;
-}
-
-header nav #menu ul li:first-child{
-    border-radius: 10px 0 0 0;
-}
-
-header nav #menu ul li:last-child{
-    border-radius: 0 10px 0 0;
+    font-family: 'Caviar Dreams';
+    font-size: 18px;
+    color: #7f8566;
+    margin-right: 20px;
 }
 
 header nav #menu ul li:hover{
-    background-color: #ceba96;
-    color: #7f6e68;
+    background-color: #b1b796;
+    color: white;
+}
+
+header nav #user {
+    display: table-cell;
+    vertical-align: middle;
+    width: 60px;
+    height: 100%;
+}
+
+header nav #user img {
+    width: 100%;
 }
 
 .central {
-    width: 80%;
-    height: 300px;
-    text-align: center;
-    display: block;
+    font-family: 'Caviar Dreams';
+    background-color: white;
 }
 
 .central .container {
-    padding-top: 20px;
+    width: 80%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.central .container article{
+    margin-left: 0;
+    display: table;
+}
+
+.central .container article .restaurantphoto {
+    display: inline-block;
+    width: 300px;
+    margin-right: 20px;
+}
+
+.central .container article .restaurantphoto img {
+    width: 100%;
+}
+
+.central .container article .content {
+    display: table-cell;
+    vertical-align: top;
 }
 
 footer {
-    height: 100px;
+    height: 80px;
     width: 100%;
     display: block;
-    background-color: #e2db85;
-    box-shadow: 0 -5px 20px 0 grey;
-    position: fixed;
-    bottom: 0;
+    background-color: #cdd3b3;
 }
 
 footer .container {
     width: 80%;
     height: 100%;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: 'Caviar Dreams';
     text-align: center;
-    color: #7f6e68;
-    text-shadow: 2px 2px 5px grey;
+    color: black;
 }
 
 footer .container .info {
@@ -134,7 +197,7 @@ footer .container .info #github img {
 
 footer .container .info #github a{
     text-decoration: none;
-    color: #7f6e68;
+    color: black;
 }
 
 @media screen and (max-width: 767px) {
