--- a/styles/style.css
+++ b/styles/style.css
@@ -15,18 +15,18 @@
 
 * {
     margin: 0 auto;
+    padding: 0;
 }
 
 body {
-    background-color: #cdd3b3;
+    background-color: #30343f;
 }
 
 header {
-    background-color: #e5ebcb;
+    background-color: #cf2230;
     display: block;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 header nav {
@@ -38,12 +38,13 @@ header nav {
 header nav #logo {
     display: table-cell;
     vertical-align: middle;
-    width: 60px;
-    height: 100%;
+    width: 32px;
+    height: auto;
 }
 
 header nav #logo img {
-    width: 100%;
+    width: inherit;
+    height: auto;
 }
 
 header nav #name {
@@ -52,7 +53,8 @@ header nav #name {
     vertical-align: middle;
     font-family: 'Kaushan';
     font-size: larger;
-    color: #7f8566;
+    font-weight: bold;
+    color: white;
 }
 
 header nav #search {
@@ -65,13 +67,13 @@ header nav #searchbar{
     height: 25px;
     width: 220px;
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
     background:url(../res/images/brush.png);
     background-size: 16px;
     background-position: left;
     background-repeat: no-repeat;
     background-color: white;
-    padding: 0 0 0 35px;
+    padding: 0 0 0 30px;
 }
 
 header nav #submit {
@@ -99,53 +101,67 @@ header nav #menu ul {
 }
 
 header nav #menu ul li {
-    width: 100px;
+    width: 80px;
     height: 30px;
     line-height: 30px;
     text-align: center;
     float: left;
+    font-weight: bold;
     font-family: 'Caviar Dreams';
-    font-size: 18px;
-    color: #7f8566;
+    font-size: 16px;
+    color: white;
     margin-right: 20px;
 }
 
 header nav #menu ul li:hover{
-    background-color: #b1b796;
-    color: white;
+    background-color: #a72230;
+    border-radius: 3px;
 }
 
 header nav #user {
     display: table-cell;
     vertical-align: middle;
-    width: 60px;
+    width: 50px;
     height: 100%;
 }
 
 header nav #user img {
-    width: 100%;
+    width: 50px;
+    vertical-align: middle;
 }
 
 .central {
     font-family: 'Caviar Dreams';
-    background-color: white;
+    background-color: #e8e8e8;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .central .container {
     width: 80%;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
-.central .container article{
+.central .container article {
     margin-left: 0;
+    width: 100%;
     display: table;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+
+}
+
+.central .container article:not(last-child) {
+    margin-bottom: 10px;
 }
 
 .central .container article .restaurantphoto {
-    display: inline-block;
+    display: table-cell;
     width: 300px;
     margin-right: 20px;
+    margin-left: 10px;
+    padding-right: 30px;
 }
 
 .central .container article .restaurantphoto img {
@@ -161,7 +177,7 @@ footer {
     height: 80px;
     width: 100%;
     display: block;
-    background-color: #cdd3b3;
+    background-color: #30343f;
 }
 
 footer .container {
@@ -169,15 +185,13 @@ footer .container {
     height: 100%;
     font-family: 'Caviar Dreams';
     text-align: center;
-    color: black;
+    color: white;
+    font-size: 12px;
+    padding-top: 10px;
 }
 
 footer .container .info {
-    display: table;
-    vertical-align: middle;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
+    float: left;
 }
 
 footer .container .info #copyright {
@@ -197,8 +211,23 @@ footer .container .info #github img {
 
 footer .container .info #github a{
     text-decoration: none;
-    color: black;
+    color: white;
+    font-size: 12px;
 }
+
+footer .container .social {
+    float: right;
+}
+
+footer .container .social div {
+    display: inline-block;
+    padding-right: 5px;
+}
+
+footer .container .social img {
+    width: 25px;
+}
+
 
 @media screen and (max-width: 767px) {
 
