--- a/styles/style.css
+++ b/styles/style.css
@@ -18,11 +18,6 @@
     src: url("../res/fonts/SourceSansPro-Regular.otf"); /*URL to font*/
 }
 
-
-
-
-
-
 * {
     margin: 0 auto;
     padding: 0;
@@ -44,7 +39,7 @@ header .pageHeader {
     background-color: #cf2230;
     width: 100%;
     position: fixed;
-    z-index: 999;
+    z-index: 99;
 }
 
 header nav {
@@ -165,7 +160,7 @@ header #searchbar:focus {
     width: 500px;
 }
 
-header #butt {
+header #butt-search {
     height: 40px;
     width: 100px;
     border: none;
@@ -176,7 +171,7 @@ header #butt {
     cursor: pointer;
 }
 
-header #but:hover {
+header #butt-search:hover {
     background-color: #a72230;
 }
 
