--- a/styles/restaurantstyle.css
+++ b/styles/restaurantstyle.css
@@ -20,8 +20,7 @@
 
 .central .contentRestaurant article {
     background-color: white;
-    border: 1px solid #e3e3e3;
-    border-radius: 3px;
+    border: 1px solid #ececec;
 }
 
 .central .contentRestaurant > article:not(:last-child) {
