--- a/styles/modalstyle.css
+++ b/styles/modalstyle.css
@@ -48,6 +48,7 @@ input[type=text], input[type=password] {
 #userbutton {
     background-color: #cf2230;
     border: none;
+    border-radius: 50%;
     cursor: pointer;
     width: 100%;
 }
