--- a/styles/modalstyle.css
+++ b/styles/modalstyle.css
@@ -23,13 +23,18 @@
     padding: 16px;
 }
 
-input[type=text], input[type=password] {
+input[type="date"]::-webkit-inner-spin-button{
+    display: none;
+}
+
+input[type=text], input[type=password], input[type=date] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    border-radius: 5px;
 }
 
 .modal button {
@@ -39,6 +44,7 @@ input[type=text], input[type=password] {
     margin: 8px 0;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .enter {
