some bugs fixed

--- a/styles/modalstyle.css
+++ b/styles/modalstyle.css
@@ -113,7 +113,7 @@ span.psw {
 
 .modal {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 999;
     left: 0;
     top: 0;
