--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,11 @@ body {
     background-color: #30343f;
 }
 
+.gmap3{
+    width: 400px;
+    height: 300px;
+}
+
 header {
     display: block;
 }
