--- a/styles/editrestaurantstyle.css
+++ b/styles/editrestaurantstyle.css
@@ -1,14 +1,14 @@
 
-#addrestaurant table {
+#editrestaurant table {
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-#addrestaurant input {
+#editrestaurant input {
     width: 500px;
 }
 
-#addrestaurant input[type=text], input[type=password], input[type=date] {
+#editrestaurant input[type=text], input[type=password], input[type=date] {
     color: #333333;
 }
 
@@ -21,11 +21,10 @@
     cursor: pointer;
 }
 
-
-#addrestaurant .table-title {
+#editrestaurant .table-title {
     color: #8e8e8e;
 }
 
-#addrestaurant .edit-icon {
+#editrestaurant .edit-icon {
     padding-left: 5px;
 }
