--- a/styles/modalstyle.css
+++ b/styles/modalstyle.css
@@ -39,6 +39,11 @@ input[type=text], input[type=password], input[type=time], input[type=number], in
     border-radius: 5px;
 }
 
+input[type=text]:focus, input[type=password]:focus, input[type=time]:focus, input[type=number]:focus, input[type=email]:focus, input[type=date]:focus, select:focus{
+  outline: none;
+  border: 2px solid #2e94ff;
+}
+
 .modal button {
     background-color: #cf2230;
     color: white;
