--- a/styles/modalstyle.css
+++ b/styles/modalstyle.css
@@ -39,9 +39,30 @@ input[type=text], input[type=password], input[type=time], input[type=number], in
     border-radius: 5px;
 }
 
+select{
+  color: #adadad;
+}
+
 input[type=text]:focus, input[type=password]:focus, input[type=time]:focus, input[type=number]:focus, input[type=email]:focus, input[type=date]:focus, select:focus{
   outline: none;
   border: 2px solid #2e94ff;
+}
+
+select option {
+  color: #000;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #adadad;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #adadad;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #adadad;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #adadad;
 }
 
 .modal button {
@@ -66,6 +87,11 @@ input[type=text]:focus, input[type=password]:focus, input[type=time]:focus, inpu
 .btn-register-owner {
     width: 49%;
     float: right;
+}
+
+#reg-btn{
+    width: 100%;
+    background-color:  #8e8e8e;
 }
 
 #btn-user {
