--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,20 @@ header nav #user img {
     vertical-align: middle;
 }
 
+header nav #btn-image {
+    font-family: 'Source Sans';
+    color: #333333;
+    padding: 12px 8px;
+    display: block;
+    border-bottom: 1px solid #e1e1e1;
+}
+
+header nav #btn-image img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 header #backg {
     display: table;
     width: 100%;
