--- a/styles/editprofilestyle.css
+++ b/styles/editprofilestyle.css
@@ -14,10 +14,12 @@
 .td-icon {
     text-align: center;
     padding-right: 10px;
+    color: #cf2230;
 }
 
 .td-info {
     text-align: left;
+    color: #8e8e8e;
 }
 
 #myprofile img {
