--- a/styles/editprofilestyle.css
+++ b/styles/editprofilestyle.css
@@ -14,7 +14,7 @@
 .td-icon {
     text-align: center;
     padding-right: 10px;
-    color: #cf2230;
+    color: #8e8e8e;
 }
 
 .td-info {
@@ -43,6 +43,10 @@
 
 .edit-col {
     padding-right: 30px;
+}
+
+.edit-col i {
+    color: #8e8e8e;
 }
 
 .edit-col i:hover {
