--- a/styles/profilestyle.css
+++ b/styles/profilestyle.css
@@ -11,6 +11,10 @@
     padding-right: 30px;
 }
 
+.edit-col i {
+    color: #8e8e8e;
+}
+
 .edit-col i:hover {
     color: #a72230;
     cursor: pointer;
@@ -24,12 +28,12 @@
 .td-icon {
     text-align: center;
     padding-right: 10px;
-    color: #cf2230;
+    color: #8e8e8e;
 }
 
 .td-info {
     text-align: left;
-    color: #636363;
+    color: #8e8e8e;
 }
 
 #myprofile img {
