--- a/styles/profilestyle.css
+++ b/styles/profilestyle.css
@@ -11,10 +11,6 @@
     padding-right: 30px;
 }
 
-.edit-col i {
-    color: #8e8e8e;
-}
-
 .edit-col i:hover {
     color: #a72230;
     cursor: pointer;
@@ -28,12 +24,12 @@
 .td-icon {
     text-align: center;
     padding-right: 10px;
-    color: #8e8e8e;
+    color: #cf2230;
 }
 
 .td-info {
     text-align: left;
-    color: #8e8e8e;
+    color: #636363;
 }
 
 #myprofile img {
