--- a/styles/profilestyle.css
+++ b/styles/profilestyle.css
@@ -62,3 +62,37 @@
 .myreplys > article:not(:last-child){
     margin-bottom: 10px;
 }
+
+.replyprofile table {
+    width: 100%;
+    border-collapse:collapse;
+}
+
+.replyprofile table td {
+    padding: 10px;
+}
+
+.userimage img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.userreviewid {
+    width: 10%;
+    text-align: center;
+    vertical-align: top;
+}
+
+.comment {
+    font-size: 14px;
+}
+
+.replyrow {
+    background-color: #f3f3f3;
+    border-radius: 3px;
+}
+
+.replycontent {
+    vertical-align: top;
+}
