--- a/styles/restaurantstyle.css
+++ b/styles/restaurantstyle.css
@@ -146,10 +146,9 @@ textarea {
 }
 
 .reply {
-    border-top: 1px solid #ccc;
     display: table;
-    padding-top: 10px;
     width: 100%;
+    background-color: red;
 }
 
 .reply form {
@@ -169,24 +168,16 @@ textarea {
     vertical-align: middle;
 }
 
-.reviewdescription {
-    display: inline-block;
-}
-
-
-
-
-
-.replyprofile table {
+.review table {
     width: 100%;
     border-collapse:collapse;
 }
 
-.replyprofile table td {
+.review table td {
     padding: 10px;
 }
 
-.userimage img{
+.reviewuserimage img{
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -203,10 +194,10 @@ textarea {
 }
 
 .replyrow {
+    border-top: 1px solid #e1e1e1;
     background-color: #f3f3f3;
-    border-radius: 3px;
 }
 
 .replycontent {
-    vertical-align: top;
+    vertical-align: middle;
 }
